second commit - added a paragraph to page

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <h1>Welcome to my page!</h1>
+    <p>Now is the time for all all good men to come to the aid of the queen!</p>
   </body>
 </html>
